dashboard/dashboard_ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kube.server.me
#      secretName: dashboard-tls
  rules:
    - host: kube.server.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
#                  number: 443
